<resources>
    <string name="app_name">FLOAT</string>
    <string name="app_id">1145386402215712</string>

    <string name="start">Begin</string>
    <string name="createcamp">Create a Campaign!</string>
    <string name="joincamp">Join a Campaign!</string>

    <string name="titlein">Title</string>
    <string name="charityin">Charity</string> <!-- TODO remove when we have a list to choose from -->
    <string name="descriptionin">Description</string>
    <string name="goalin">Goal Location Name</string>
    <string name="pledgein">Pledge amount</string>
    <string name="initiallocationin">Launch Location Coordinates (your current location)</string>
    <string name="destinationlocationin">Goal Location Coordinates</string>

    <string name="savecamp">Save Campaign</string>
    <string name="launchcamp">Launch Campaign</string>
    <string name="deets">Details</string>
    <string name="title_activity_payment_status">PaymentStatus</string>

    <string name="usernamein">Username</string>
    <string name="profilepicin">Profile Picture</string>
    <string name="namein">Name</string>
    <string name="blurbin">Tell us something about yourself</string>
    <string name="saveuser">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_future_payment_agreement1">FuturePaymentAgreement1</string>

    <string name="wait">Loading, please wait.</string>
    <string name="filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string-array name="charity_name">
        <item>United Way</item>
        <item>Red Cross</item>
    </string-array>
</resources>